a hack to make awards still look correct on collapsed comments

--- a/src/main.scss
+++ b/src/main.scss
@@ -952,3 +952,8 @@ summary {
 .post.crosspost-post {
     padding: 10px;
 }
+
+.comment-collapsed .post-content-subminfo img {
+    filter: grayscale(100%);
+    transform: skewX(-10deg);
+}
